# passwd-saver

./: .gitignore  CMakeLists.txt  README.md  design.md  mklua.lua
details/: CMake-steps.md  executable.md  utility-func.md
include/: harry_fs.h
src/: harry_fs.cpp  main.cpp
testground/: hello.txt
testground/keep-data/: databox
